2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnothello.c: (save_state): remove nstr(), patch from
	r_kinder@yahoo.com (Richard Kinder)

2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnothello.c: (quit_game_maybe), (quit_game_cb), (about_cb),
	(expose_event), (gui_draw_pixmap), (gui_draw_pixmap_buffer),
	(gui_draw_grid), (load_pixmaps), (create_window), (gui_status),
	(set_bg_color), (main):
	* network.c: (network_handle_input), (game_move), (network_new):
	* properties.c: (black_computer_level_select),
	(white_computer_level_select), (quick_moves_select),
	(flip_final_select), (animate_stagger_select), (grid_select),
	(animate_select), (apply_cb), (set_selection), (fill_menu),
	(dialog_help_callback), (show_properties_dialog):
	make it work with -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED 
	-DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED

2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnothello.c: (about_cb): again, don't use a deprecated call

2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnothello.c: (about_cb): don't use deprecated
	gnome_unconditional_pixmap_file()

2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnothello.c: (quit_game_cb), (about_cb):
	* properties.c: (fill_menu), (show_properties_dialog):
	don't use gnome_dialog_set_parent, show a nice icon in the about box

2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnothello.c: (save_state):
	* properties.c: (apply_changes), (set_selection), (free_str),
	(fill_menu): some g_-ification that fixes some double-free bugs
	(Closes: #78130)

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/iagno.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/iagno.xml : move to XML.

	* help/C/iagno-C.omf : move to XML.

	* help/C/iagno.sgml : deleted, move to XML.

	* help/C/Makefile.am : move to XML.
